--- a/style.css
+++ b/style.css
@@ -10,4 +10,7 @@ html {
 
 body {
     font-family: 'Archivo', sans-serif;
+    background-image: url("images/money-background.jpg");
+    background-size: 1700px;
+    background-repeat: no-repeat;
 }
